BACKLOG:
  - create dump
  - visualize schema (ERD?)
  - show/hide columns on Table Data view (using JS and cookies) (something like http://griddlegriddle.github.io/Griddle/)
  - scroll page to Table Data if we have many tables and user click in sidebar on it
  - delete record in table without PK
  - add sorting/filters to data-tables
  - add quick aggregation functions for columns
  - add ability to change width of columns (and remember selection in cookies) (something like http://www.bacubacu.com/colresizable/)
  - edit table row in form


0.6 - October 28, 2015
  - better results if no results
  - add truncate table
  - add information about indexes
  - fixed issue with helpers (thanks @losadaem)
  - added delete for records (by PK)
  - added information about primary key

0.5.1 - October 27, 2015
  - removed log files and other garbage to reduce size of gem

0.5 - October 26, 2015
  - added config.verify_access_proc to make possible enable access for users (for example current_user.admin?)
  - small tweaks to rails_db_data_table and rails_db_data_sql
  - other minor fixes
  - working on documentation

== Starting publishing Changes ===