@@ -1,7 +1,5 @@
 source 'https://rubygems.org'
 
-gemspec
-
 gem 'rails'
 gem 'foundation-rails'
 gem 'sass'
