@@ -8,3 +8,5 @@ $('.sidebar_table_<%= @table.name %>').addClass('selected');
 stickyFooter();
 
 $(document).foundation('reflow');
+
+$(document).scrollTop(0);
