@@ -1,0 +1,24 @@
+require_relative 'rails_db/version'
+
+require_relative 'rails_db/connection'
+require_relative 'rails_db/database'
+require_relative 'rails_db/blank_results'
+require_relative 'rails_db/mysql_result'
+require_relative 'rails_db/result'
+require_relative 'rails_db/rails_db_error'
+require_relative 'rails_db/history'
+
+require_relative 'rails_db/sql_query_data'
+require_relative 'rails_db/sql_explain'
+require_relative 'rails_db/sql_import'
+require_relative 'rails_db/sql_query'
+
+require_relative 'rails_db/table_pagination'
+require_relative 'rails_db/table'
+require_relative 'rails_db/table_data'
+
+require_relative 'rails_db/adapters/base_adapter'
+require_relative 'rails_db/adapters/mysql'
+require_relative 'rails_db/adapters/postgres'
+require_relative 'rails_db/adapters/sqlite'
+
