@@ -1,0 +1,8 @@
+module RailsDb
+  class BlankResults
+
+    def rows; [] end
+    def columns; [] end
+
+  end
+end
