@@ -9,7 +9,7 @@ module RailsDb
     def paginate(options = {})
       self.per_page     = (options[:per_page] || DEFAULT_PAGINATION_PER_PAGE).to_i
       self.current_page = (options[:page] || 1).to_i
-      self.offset       = current_page * per_page - per_page
+      self.offset       = (current_page * per_page) - per_page
       self.sort_column  = options[:sort_column]
       self.sort_order   = options[:sort_order]
       table
