@@ -1,3 +1,3 @@
 module RailsDb
-  VERSION = "0.6"
+  VERSION = "0.7"
 end
