@@ -16,4 +16,17 @@ class DatabaseTest < ActiveSupport::TestCase
     assert_not_nil query.explain
   end
 
+  test "insert" do
+    query = RailsDb::SqlQuery.new('delete from projects_users')
+    query.execute
+    User.delete_all
+    assert_equal 0, RailsDb::Database.count('projects_users')
+    query = RailsDb::SqlQuery.new('insert into projects_users(project_id, user_id) values(1,2)')
+    query.execute
+    assert_equal query.data.columns, []
+    assert_equal query.data.rows, []
+    assert_not_nil query.explain
+    assert_equal 1, RailsDb::Database.count('projects_users')
+  end
+
 end
